@@ -17,11 +17,11 @@
 #define _ML_OSDEP_
 
 #if defined(OPSYS_UNIX)
+#  include "ml-unixdep.h"
 #  if (defined(OPSYS_SUNOS) || defined(OPSYS_IRIX4) || defined(OPSYS_LINUX) || defined(OPSYS_AIX) || defined(OPSYS_FREEBSD) || defined(OPSYS_NETBSD) || defined(OPSYS_NETBSD2) || defined(OPSYS_OPENBSD) || defined(OPSYS_DARWIN) || defined(OPSYS_CYGWIN))
 #     define GETPAGESIZE()	(getpagesize())
 #  else
    /* POSIX 1003.1b interface */
-#    include "ml-unixdep.h"
 #    ifdef _SC_PAGESIZE
 #      define GETPAGESIZE()	(sysconf(_SC_PAGESIZE))
 #    else
