@@ -1,25 +1,0 @@
-# mk.ppc-darwin5
-#
-# COPYRIGHT (c) 2002 Bell Labs, Lucent Technologies.
-#
-# Makefile for MacOS X 10.1
-#
-
-SHELL =		/bin/sh
-
-MAKE =		make
-CC =		cc -ansi
-CFLAGS =	-g -O2
-CPP =           cc -x assembler-with-cpp -E -P -ansi
-XOBJS =
-XLIBS =	
-LD_LIBS =
-XDEFS =
-BASE_DEFS =
-DEFS		= $(XDEFS) $(BASE_DEFS) -DHOST_PPC -DTARGET_PPC -DOPSYS_UNIX -DOPSYS_DARWIN -DOPSYS_MACOS_10_1
-TARGET =	PPC
-VERSION =	v-ppc-darwin5
-RUNTIME =	run.ppc-darwin5
-
-all:
-	($(MAKE) RUNTIME="$(RUNTIME)" VERSION="$(VERSION)" CC="$(CC)" CFLAGS="$(CFLAGS)" CPP="$(CPP)" TARGET=$(TARGET) DEFS="$(DEFS)" XOBJS="$(XOBJS)" XLIBS="$(XLIBS)" LD_LIBS="$(LD_LIBS)" $(RUNTIME))
