@@ -1,31 +1,31 @@
 # mk.x86-darwin
 #
-# COPYRIGHT (c) 2006 The SML/NJ Fellowship
+# COPYRIGHT (c) 2012 The SML/NJ Fellowship
 #
-# Makefile for MacOS X 10.4+ on Intel processors
+# Makefile for MacOS X 10.6+ on Intel processors
 #
-# the -D_NONSTD_SOURCE flag is needed for Mac OS X 10.5, because the
-# mcontext field names changed.
+
 #
 # The SDK variable is set to the SDK minimum Mac OS X version that you want
 # to support.  Note that since Lion, the 10.5 (and 10.6?) SDKs are not part
 # of the Xcode install.
 #
+#SDK =		-isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
+SDK =		-isysroot /Developer/SDKs/MacOSX10.6.sdk -mmacosx-version-min=10.6
 
 SHELL =		/bin/sh
 
 MAKE =		make
 AS =		/usr/bin/as -arch i386
-CC =		cc -m32 -ansi
-SDK =		-isysroot /Developer/SDKs/MacOSX10.5.sdk -mmacosx-version-min=10.5
+CC =		cc -m32 -std=c99
 CFLAGS =	-g -O2 -D_DARWIN_C_SOURCE $(SDK)
-CPP =           cc -x assembler-with-cpp -E -P -ansi
+CPP =           cc -x assembler-with-cpp -E -P -std=c99
 XOBJS =
 XLIBS =         ../c-libs/dl/libunix-dynload.a
 LD_LIBS =       -ldl
 XDEFS =
 BASE_DEFS =
-DEFS		= $(XDEFS) $(BASE_DEFS) -DHOST_X86 -DTARGET_X86 -DOPSYS_UNIX -DOPSYS_DARWIN -DOPSYS_MACOS_10_2 -DGNU_ASSEMBLER -DDLOPEN -DINDIRECT_CFUNC
+DEFS		= $(XDEFS) $(BASE_DEFS) -DHOST_X86 -DTARGET_X86 -DOPSYS_UNIX -DOPSYS_DARWIN -DGNU_ASSEMBLER -DDLOPEN -DINDIRECT_CFUNC
 TARGET =	X86
 VERSION =	v-x86-darwin
 RUNTIME =	run.x86-darwin
